--- a/GameDevelop.html
+++ b/GameDevelop.html
@@ -6,7 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Game Development | Software Company | Digital Minds On</title>
-    <meta name="description" content="">
+    <meta name="description"
+        content="More than 70% of mobile games are powered by Unity. Build and scale your mobile game effortlessly with Unity Pro and our comprehensive suite of development tools.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
@@ -189,7 +190,7 @@
                             <div class="headerarea__component">
                                 <div class="headerarea__right">
 
-                                
+
                                     <div class="headerarea__button">
                                         <a class="default__button" href="request.html">GET FREE QUATE</a>
                                     </div>
@@ -429,7 +430,7 @@
         <div class="breadcrumbarea-video">
             <div class="breadcrumbarea__overlay">
                 <video class="breadcrumbarea__video__element" autoplay muted loop>
-                    <source src="assets/img/service/WhatsApp Video 2024-11-23 at 1.33.20 AM.mp4" type="video/mp4">
+                    <source src="assets/img/service/Video/game.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
@@ -438,19 +439,20 @@
                     <div class="col-xl-12">
                         <div class="breadcrumbarea__content__wraper">
                             <div class="breadcrumbarea__title">
-                                <h2 class="heading">Service Details</h2>
+                                <h2 class="heading">Mobile Game Development </h2>
                             </div>
                             <div class="breadcrumbarea___para">
-                                <p class="banner-width" style="max-width: 750px;">Lorem ipsum dolor sit amet,
-                                    consectetur adipiscing elit. Nullam tincidunt sem ut
-                                    efficitur finibus. Nulla bibendum, mauris a iaculis tincidunt, dolor ligula varius
-                                    nibh, ut lacinia sem ligula id velit. Nulla scelerisque, magna mollis aliquam
-                                    aliquet, lacus risus interdum orci, lobortis maximus neque orci sit amet mauris.</p>
+                                <p class="banner-width" style="max-width: 750px;">At Digital Minds On, discover how to
+                                    create engaging mobile games, optimize performance, and deliver regular updates.
+                                    Explore proven strategies for game monetization, user acquisition, and successful
+                                    publishing. Learn to integrate cutting-edge technologies, enhance user experience,
+                                    and stay ahead in the competitive mobile gaming market with expert insights and
+                                    innovative solutions.</p>
                             </div>
                             <div class="banner-button">
                                 <ul class="common-button">
                                     <a class="default__button" href="#">GET FREE QUATE</a>
-                                    <a class="default__button" href="#">GET FREE QUATE</a>
+                                    <a class="default__button" href="#">Contact Us</a>
                                 </ul>
                             </div>
                         </div>
@@ -606,7 +608,7 @@
                     <div class="col-xl-8 col-lg-8 col-md-12 col-12">
                         <div class="service__details__wraper">
                             <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                                <h4>Management Consulting</h4>
+                                <h4>Approach Mobile App Game DevelopmentSS</h4>
                             </div>
                             <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
                                 <p>There is always the development of new technologies as well as trends that try to
