--- a/appdevelop.html
+++ b/appdevelop.html
@@ -435,7 +435,7 @@
         <div class="breadcrumbarea-video">
             <div class="breadcrumbarea__overlay">
                 <video class="breadcrumbarea__video__element" autoplay muted loop>
-                    <source src="assets/img/service/WhatsApp Video 2024-11-23 at 1.33.20 AM.mp4" type="video/mp4">
+                    <source src="assets/img/service/Video/application.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
@@ -689,12 +689,12 @@
                                     excellent looks and great functionality. Due to this most apps are always modified
                                     according to the performance statistics that are usually recorded.</p>
                             </div>
-                            <div class="breadcrumbarea-video-small">
+                            <!-- <div class="breadcrumbarea-video-small">
                                 <video class="breadcrumbarea__video__element" autoplay="" muted="" loop="">
                                     <source src="assets/img/service/Video/application.mp4" type="video/mp4">
                                     Your browser does not support the video tag.
                                 </video>
-                            </div>
+                            </div> -->
                             <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
                                 <h2>Data Management & Analytics </h2>
                             </div>
