--- a/index.html
+++ b/index.html
@@ -1303,16 +1303,16 @@
             <div class="container">
                 <div class="brand__inner">
                     <div class="brand__single">
-                        <img src="assets/img/logo/logo/icon.svg" alt="">
+                        <img src="assets/img/logo/footer_brand_crunch_base.webp" alt="">
                     </div>
                     <div class="brand__single">
-                        <img src="assets/img/logo/logo/logo.e4c246ea.svg" alt="">
+                        <img src="assets/img/logo/footer_brand_trust.webp" alt="">
                     </div>
                     <div class="brand__single">
-                        <img src="assets/img/logo/logo/Untitled-1.svg" alt="">
+                        <img src="assets/img/logo/footer_brand_design_crunch.webp" alt="">
                     </div>
                     <div class="brand__single">
-                        <img src="assets/img/logo/logo.e4c246ea.png" alt="">
+                        <img src="assets/img/logo/footer_brand1.webp" alt="">
                     </div>
                 </div>
             </div>
