--- a/itexpert.html
+++ b/itexpert.html
@@ -5,8 +5,9 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>IT Specialists | Digital Minds On</title>
-    <meta name="description" content="">
+    <title>Managed IT Network Services Provider | Digital Minds On</title>
+    <meta name="description"
+        content="Reliable managed IT network services provider offering cost-effective solutions to enhance connectivity, scalability, and performance for your business.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
@@ -148,7 +149,7 @@
                                             <li class="headerarea__common__dropdown"><a
                                                     class="headerarea__has__dropdown" href="service.html">Services
                                                     <i class="icofont-long-arrow-down"></i></a>
-                                                    <ul
+                                                <ul
                                                     class="headerarea__submenu headerarea__submenu--five--wrap service-scrollbar">
 
                                                     <li><a href="webdevelopment.html">Web Development</a></li>
@@ -190,7 +191,7 @@
                             <div class="headerarea__component">
                                 <div class="headerarea__right">
 
-                                   
+
                                     <div class="headerarea__button">
                                         <a class="default__button" href="request.html">GET FREE QUATE</a>
                                     </div>
@@ -429,7 +430,7 @@
         <div class="breadcrumbarea-video">
             <div class="breadcrumbarea__overlay">
                 <video class="breadcrumbarea__video__element" autoplay muted loop>
-                    <source src="assets/img/service/WhatsApp Video 2024-11-23 at 1.33.20 AM.mp4" type="video/mp4">
+                    <source src="assets/img/service/Video/it.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
@@ -438,14 +439,17 @@
                     <div class="col-xl-12">
                         <div class="breadcrumbarea__content__wraper">
                             <div class="breadcrumbarea__title">
-                                <h2 class="heading">IT Specialists</h2>
+                                <h2 class="heading">Managed IT Network Services Provider</h2>
                             </div>
                             <div class="breadcrumbarea___para">
-                                <p class="banner-width" style="max-width: 750px;">Lorem ipsum dolor sit amet,
-                                    consectetur adipiscing elit. Nullam tincidunt sem ut
-                                    efficitur finibus. Nulla bibendum, mauris a iaculis tincidunt, dolor ligula varius
-                                    nibh, ut lacinia sem ligula id velit. Nulla scelerisque, magna mollis aliquam
-                                    aliquet, lacus risus interdum orci, lobortis maximus neque orci sit amet mauris.</p>
+                                <p class="banner-width" style="max-width: 750px;"> At Digital Minds On, we understand
+                                    the vital role of computer networking in connecting devices through servers,
+                                    routers, and switches to access the internet and exchange data seamlessly. In
+                                    today’s business landscape, networking is essential for operations of all sizes. As
+                                    organizations handle increasing amounts of data, the need for robust networking
+                                    grows. When demands exceed in-house capabilities, partnering with a managed IT
+                                    network services provider becomes a smart, cost-effective solution for maintaining
+                                    efficiency and scalability.</p>
                             </div>
                             <div class="banner-button">
                                 <ul class="common-button">
@@ -754,7 +758,8 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/IT Specialist/Technical Support.png" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/IT Specialist/Technical Support.png"
+                                        class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -771,7 +776,8 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/IT Specialist/Network Administration.png" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/IT Specialist/Network Administration.png"
+                                        class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -788,7 +794,8 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/IT Specialist/System Administration.png" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/IT Specialist/System Administration.png"
+                                        class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -805,7 +812,8 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/IT Specialist/Security Management.png" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/IT Specialist/Security Management.png"
+                                        class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -824,7 +832,8 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/IT Specialist/Database Management.png" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/IT Specialist/Database Management.png"
+                                        class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -841,7 +850,8 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/IT Specialist/Software DevelopmentIntegration.png" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/IT Specialist/Software DevelopmentIntegration.png"
+                                        class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -855,7 +865,7 @@
                             </div>
                         </div>
                     </div>
-            
+
 
                 </div>
                 <div class="row">
@@ -1003,7 +1013,7 @@
                         </div>
 
                         <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                            <h2>Conclusion</h2>
+                            <h2>Final Worlds</h2>
                         </div>
                         <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
                             <p>IT specialists can be regarded as an essential part of any modern organization. These
