--- a/seo.html
+++ b/seo.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>SEO Specialist | 1 Google Ranking | Digital Minds On</title>
+    <title>Affordable Search Engine Optimization Services | Digital Minds On</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -429,7 +429,7 @@
         <div class="breadcrumbarea-video">
             <div class="breadcrumbarea__overlay">
                 <video class="breadcrumbarea__video__element" autoplay muted loop>
-                    <source src="assets/img/service/WhatsApp Video 2024-11-23 at 1.33.20 AM.mp4" type="video/mp4">
+                    <source src="assets/img/service/Video/seo.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
@@ -438,7 +438,7 @@
                     <div class="col-xl-12">
                         <div class="breadcrumbarea__content__wraper">
                             <div class="breadcrumbarea__title">
-                                <h2 class="heading">Search Engine Optimization (SEO)</h2>
+                                <h2 class="heading">Affordable Search Engine Optimization Services</h2>
                             </div>
                             <div class="breadcrumbarea___para">
                                 <p class="banner-width" style="max-width: 750px;"> Digital Minds On provides
