--- a/wordpress.html
+++ b/wordpress.html
@@ -5,8 +5,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>WordPress Development | Digital Minds On</title>
-    <meta name="description" content="">
+    <title>Custom Wordpress Development Services Solution | Digital Minds On</title>
+    <meta name="description" content="Digital Minds On offers expert WordPress development services to maximize your site’s performance. Boost leads and sales with custom themes designed by our award-winning team. Start today!">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
@@ -144,7 +144,7 @@
                                             <li class="headerarea__common__dropdown"><a
                                                     class="headerarea__has__dropdown" href="service.html">Services
                                                     <i class="icofont-long-arrow-down"></i></a>
-                                                    <ul
+                                                <ul
                                                     class="headerarea__submenu headerarea__submenu--five--wrap service-scrollbar">
 
                                                     <li><a href="webdevelopment.html">Web Development</a></li>
@@ -186,7 +186,7 @@
                             <div class="headerarea__component">
                                 <div class="headerarea__right">
 
-                                  
+
                                     <div class="headerarea__button">
                                         <a class="default__button" href="request.html">GET FREE QUATE</a>
                                     </div>
@@ -425,7 +425,7 @@
         <div class="breadcrumbarea-video">
             <div class="breadcrumbarea__overlay">
                 <video class="breadcrumbarea__video__element" autoplay="" muted="" loop="">
-                    <source src="assets/img/service/WhatsApp Video 2024-11-23 at 1.33.20 AM.mp4" type="video/mp4">
+                    <source src="assets/img/service/Video/wordpress.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
@@ -434,19 +434,23 @@
                     <div class="col-xl-12">
                         <div class="breadcrumbarea__content__wraper">
                             <div class="breadcrumbarea__title">
-                                <h2 class="heading">Webdevelopment Services</h2>
+                                <h2 class="heading">Custom Wordpress Development Services Solution</h2>
                             </div>
                             <div class="breadcrumbarea___para">
-                                <p class="banner-width" style="max-width: 750px;">Lorem ipsum dolor sit amet,
-                                    consectetur adipiscing elit. Nullam tincidunt sem ut
-                                    efficitur finibus. Nulla bibendum, mauris a iaculis tincidunt, dolor ligula varius
-                                    nibh, ut lacinia sem ligula id velit. Nulla scelerisque, magna mollis aliquam
-                                    aliquet, lacus risus interdum orci, lobortis maximus neque orci sit amet mauris.</p>
+                                <p class="banner-width" style="max-width: 750px;"> At Digital Minds On, we specialize in
+                                    maximizing your WordPress website’s performance with our top-notch WordPress
+                                    development services. Our award-winning design and development team creates custom
+                                    themes tailored to your brand, helping you capture more leads and boost online
+                                    sales. Whether you’re launching a new site or enhancing an existing one, we ensure
+                                    seamless functionality and a stunning design that stands out. Let us help you
+                                    elevate your online presence with a solution that drives results. Get started on
+                                    your project today and experience the difference of working with experts committed
+                                    to your success.</p>
                             </div>
                             <div class="banner-button">
                                 <ul class="common-button">
                                     <a class="default__button" href="#">GET FREE QUATE</a>
-                                    <a class="default__button" href="#">GET FREE QUATE</a>
+                                    <a class="default__button" href="#">Contact Us</a>
                                 </ul>
                             </div>
                         </div>
