--- a/digtalmarketing.html
+++ b/digtalmarketing.html
@@ -431,7 +431,7 @@
         <div class="breadcrumbarea-video">
             <div class="breadcrumbarea__overlay">
                 <video class="breadcrumbarea__video__element" autoplay muted loop>
-                    <source src="assets/img/service/WhatsApp Video 2024-11-23 at 1.33.20 AM.mp4" type="video/mp4">
+                    <source src="assets/img/service/Video/marketing.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
@@ -632,8 +632,16 @@
                             <div class="service__details__planning" data-aos="fade-up" data-aos-duration="1500">
                                 <div class="row">
                                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-                                        <div class="service__details__planning__img">
-                                            <img src="assets/img/service/service__details__2.png" alt="">
+
+                                        <!-- video -->
+                                        <div class="breadcrumbarea-video-small">
+                                            <div class="breadcrumbarea__overlay-video">
+                                                <video class="breadcrumbarea__video__element" autoplay="" muted=""
+                                                    loop="">
+                                                    <source src="assets/img/service/Video/smarket.mp4" type="video/mp4">
+                                                    Your browser does not support the video tag.
+                                                </video>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
