--- a/Content_Creater.html
+++ b/Content_Creater.html
@@ -5,8 +5,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>SEO Specialist | 1 Google Ranking | Digital Minds On</title>
-    <meta name="description" content="">
+    <title>Professional Content Creation Agency | Digital Minds On</title>
+    <meta name="description" content="Boost trust and sales with professional content creation. Deliver tailored, engaging content that resonates with your target audience and drives results.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
@@ -428,7 +428,7 @@
         <div class="breadcrumbarea-video">
             <div class="breadcrumbarea__overlay">
                 <video class="breadcrumbarea__video__element" autoplay muted loop>
-                    <source src="assets/img/service/WhatsApp Video 2024-11-23 at 1.33.20 AM.mp4" type="video/mp4">
+                    <source src="assets/img/service/Video/content.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
@@ -440,7 +440,7 @@
                                 <h2 class="heading"> Professional Content Creation Agency</h2>
                             </div>
                             <div class="breadcrumbarea___para">
-                                <p class="banner-width" style="max-width: 750px;"> Digital Minds focuses on designing
+                                <p class="banner-width" style="max-width: 750px;"> Digital Minds On focuses on designing
                                     only the best, appealing, and relevant content that will not only grab the target
                                     audience’s attention but also generate trust and sales. Whether a company needs to
                                     improve its current brand image or a start-up company wants to set an image for
@@ -622,30 +622,23 @@
                                     suited to your target market and the purpose of your business.</p>
                                 <p></p>
                             </div>
-                            <div class="service__details__planning" data-aos="fade-up" data-aos-duration="1500">
-                                <div class="row">
-
-                                    <div class="col-xl-12 col-lg-12 col-md-6 col-sm-12">
-                                        <div class="service__details__planning__inner">
-                                            <div class="service__details__planning__heading">
-                                                <h2>What We Offer</h2>
-                                            </div>
-                                            <div class="service__details__planning__text">
-                                                <div class="service__details__planning__heading">
-                                                    <h3>Blog Writing</h3>
-                                                </div>
-                                                <p>Blogs are a powerful and useful tool to post information, offer
-                                                    knowledge in the digital sphere, and become an expert in your field.
-                                                    Our professional blog writers produce quality, informative, and
-                                                    persuasive blog articles that create traffic to your site.</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+                           
+                            <div class="service__details__planning__heading">
+                                <h2>What We Offer</h2>
                             </div>
+                            <div class="service__details__planning__text">
+                                <div class="service__details__planning__heading">
+                                    <h3>Blog Writing</h3>
+                                </div>
+                                <p>Blogs are a powerful and useful tool to post information, offer
+                                    knowledge in the digital sphere, and become an expert in your field.
+                                    Our professional blog writers produce quality, informative, and
+                                    persuasive blog articles that create traffic to your site.</p>
+                            </div>
+                        </div>
 
                             <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                                <h4>Website Content</h4>
+                                <h3>Website Content</h3>
                             </div>
                             <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
                                 <p>Your website is you, and the content is the face of the business, so it should hold
@@ -655,7 +648,7 @@
 
                             </div>
                             <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                                <h4>Social Media Content</h4>
+                                <h3>Social Media Content</h3>
                             </div>
                             <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
                                 <p>Today social networks are the pulse of communication and interaction. Our creative
@@ -664,7 +657,7 @@
 
                             </div>
                             <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                                <h4>Video Scripts and Storyboarding</h4>
+                                <h3>Video Scripts and Storyboarding</h3>
                             </div>
                             <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
                                 <p>Videos captivate the hearts of the viewers and make it easy to convey any story.
@@ -674,7 +667,7 @@
 
                             </div>
                             <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                                <h4>Copywriting Services</h4>
+                                <h3>Copywriting Services</h3>
                             </div>
                             <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
                                 <p>Words have the power to sell. We strive to make persuasive and even more active copy
@@ -682,7 +675,7 @@
 
                             </div>
                             <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                                <h4> E-books and Whitepapers</h4>
+                                <h3> E-books and Whitepapers</h3>
                             </div>
                             <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
                                 <p>For companies, which want to reap the benefits of thought leadership our team
@@ -690,37 +683,38 @@
                                     contain valuable thoughts and information that is relevant to your audience.</p>
 
                             </div>
+                            <div class="service__details__planning__text">
+                                <div class="service__details__planning__heading">
+                                    <h3>Creative Content Campaigns</h3>
+                                </div>
+                                <p>Any great content must create unique ways of presenting it to the public. Whether your
+                                    goal is to launch a product, generate brand recognition or consumer interest, or to
+                                    encourage consumption, we come up with and run unique and captivating promotional
+                                    strategies and advertisements.</p>
+                            </div>
+                            <div class="service__details__planning__text">
+                                <div class="service__details__planning__heading">
+                                    <h2>The Digital Minds On Approach</h2>
+                                </div>
+                                <div class="service__details__planning__heading">
+                                    <h3>Understanding Your Vision</h3>
+                                </div>
+                                <p>To do this, we first carry out a comprehensive analysis of your industry, target market,
+                                    and objectives. We come up with content strategies that are a reflection of your brand.
+                                </p>
+                            </div>
+                            <div class="service__details__planning__text">
+                                <div class="service__details__planning__heading">
+                                    <h3>Creative Collaboration</h3>
+                                </div>
+                                <p>Customer care is a central aspect of our team’s function, especially as we help you to
+                                    refine ideas and concepts to actualize your vision. What’s more, each piece of content
+                                    is in line with the brand you wish to convey and communicates this clearly.</p>
+                            </div>
 
 
                         </div>
-                        <div class="service__details__planning__text">
-                            <div class="service__details__planning__heading">
-                                <h3>Creative Content Campaigns</h3>
-                            </div>
-                            <p>Any great content must create unique ways of presenting it to the public. Whether your
-                                goal is to launch a product, generate brand recognition or consumer interest, or to
-                                encourage consumption, we come up with and run unique and captivating promotional
-                                strategies and advertisements.</p>
-                        </div>
-                        <div class="service__details__planning__text">
-                            <div class="service__details__planning__heading">
-                                <h2>The Digital Minds On Approach</h2>
-                            </div>
-                            <div class="service__details__planning__heading">
-                                <h3>Understanding Your Vision</h3>
-                            </div>
-                            <p>To do this, we first carry out a comprehensive analysis of your industry, target market,
-                                and objectives. We come up with content strategies that are a reflection of your brand.
-                            </p>
-                        </div>
-                        <div class="service__details__planning__text">
-                            <div class="service__details__planning__heading">
-                                <h3>Creative Collaboration</h3>
-                            </div>
-                            <p>Customer care is a central aspect of our team’s function, especially as we help you to
-                                refine ideas and concepts to actualize your vision. What’s more, each piece of content
-                                is in line with the brand you wish to convey and communicates this clearly.</p>
-                        </div>
+                       
                     </div>
                 </div>
                 <div class="row g-4 horizontal-card">
