--- a/seo.html
+++ b/seo.html
@@ -189,7 +189,7 @@
                             <div class="headerarea__component">
                                 <div class="headerarea__right">
 
-                                  
+
                                     <div class="headerarea__button">
                                         <a class="default__button" href="request.html">GET FREE QUATE</a>
                                     </div>
@@ -724,20 +724,42 @@
                                                     services immediately.</p>
 
                                             </div>
-                                            <div class="service__details__heading" data-aos="fade-up"
-                                                data-aos-duration="1500">
-                                                <h3>Analytics and Reporting</h3>
-                                            </div>
-                                            <div class="service__details__text" data-aos="fade-up"
-                                                data-aos-duration="1500">
-                                                <p>We offer status reports on a frequent and consistent basis to help
-                                                    you to monitor your website performance. Using exposures such as
-                                                    organic traffic, keyword position, and user activities, we regularly
-                                                    adjust the strategies to provide sustainable results and tangible
-                                                    Return on Investment.</p>
 
-                                            </div>
 
+                                            <div class="row">
+                                                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+                                                    <!-- video -->
+                                                    <div class="breadcrumbarea-video-small">
+                                                        <div class="breadcrumbarea__overlay-video">
+                                                            <video class="breadcrumbarea__video__element" autoplay=""
+                                                                muted="" loop="">
+                                                                <source src="assets/img/service/soft.mp4"
+                                                                    type="video/mp4">
+                                                                Your browser does not support the video tag.
+                                                            </video>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+                                                    <div class="service__details__heading" data-aos="fade-up"
+                                                        data-aos-duration="1500">
+                                                        <h3>Analytics and Reporting</h3>
+                                                    </div>
+                                                    <div class="service__details__text" data-aos="fade-up"
+                                                        data-aos-duration="1500">
+                                                        <p>We offer status reports on a frequent and consistent basis to
+                                                            help
+                                                            you to monitor your website performance. Using exposures
+                                                            such as
+                                                            organic traffic, keyword position, and user activities, we
+                                                            regularly
+                                                            adjust the strategies to provide sustainable results and
+                                                            tangible
+                                                            Return on Investment.</p>
+
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
