--- a/wordpress.html
+++ b/wordpress.html
@@ -6,7 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Custom Wordpress Development Services Solution | Digital Minds On</title>
-    <meta name="description" content="Digital Minds On offers expert WordPress development services to maximize your site’s performance. Boost leads and sales with custom themes designed by our award-winning team. Start today!">
+    <meta name="description"
+        content="Digital Minds On offers expert WordPress development services to maximize your site’s performance. Boost leads and sales with custom themes designed by our award-winning team. Start today!">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
@@ -683,8 +684,14 @@
                             <div class="service__details__planning" data-aos="fade-up" data-aos-duration="1500">
                                 <div class="row">
                                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-                                        <div class="service__details__planning__img">
-                                            <img src="assets/img/service/service__details__2.png" alt="">
+                                        <div class="breadcrumbarea-video-small">
+                                            <div class="breadcrumbarea__overlay-video">
+                                                <video class="breadcrumbarea__video__element" autoplay="" muted=""
+                                                    loop="">
+                                                    <source src="assets/img/service/soft.mp4" type="video/mp4">
+                                                    Your browser does not support the video tag.
+                                                </video>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
