logos add in project

--- a/Content_Creater.html
+++ b/Content_Creater.html
@@ -451,7 +451,7 @@
                             <div class="banner-button">
                                 <ul class="common-button">
                                     <a class="default__button" href="#">GET FREE QUATE</a>
-                                    <a class="default__button" href="#">Contact</a>
+                                    <a class="default__button" href="#">Contact Us</a>
                                 </ul>
                             </div>
                         </div>
