--- a/software.html
+++ b/software.html
@@ -189,7 +189,7 @@
                             <div class="headerarea__component">
                                 <div class="headerarea__right">
 
-                                   
+
                                     <div class="headerarea__button">
                                         <a class="default__button" href="request.html">GET FREE QUATE</a>
                                     </div>
@@ -642,7 +642,8 @@
                                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                                         <div class="breadcrumbarea-video-small">
                                             <div class="breadcrumbarea__overlay-video">
-                                                <video class="breadcrumbarea__video__element" autoplay="" muted="" loop="">
+                                                <video class="breadcrumbarea__video__element" autoplay="" muted=""
+                                                    loop="">
                                                     <source src="assets/img/service/soft.mp4" type="video/mp4">
                                                     Your browser does not support the video tag.
                                                 </video>
@@ -958,25 +959,16 @@
 
                     <div class="brand__inner brand__inner--2">
                         <div class="brand__single">
-                            <img src="assets/img/brand/brand__1.png" alt="">
+                            <img src="assets/img/logo/footer_brand_crunch_base.webp" alt="">
                         </div>
                         <div class="brand__single">
-                            <img src="assets/img/brand/brand__2.png" alt="">
+                            <img src="assets/img/logo/footer_brand_trust.webp" alt="">
                         </div>
                         <div class="brand__single">
-                            <img src="assets/img/brand/brand__1.png" alt="">
+                            <img src="assets/img/logo/footer_brand_design_crunch.webp" alt="">
                         </div>
                         <div class="brand__single">
-                            <img src="assets/img/brand/brand__2.png" alt="">
-                        </div>
-                        <div class="brand__single">
-                            <img src="assets/img/brand/brand__1.png" alt="">
-                        </div>
-                        <div class="brand__single">
-                            <img src="assets/img/brand/brand__2.png" alt="">
-                        </div>
-                        <div class="brand__single">
-                            <img src="assets/img/brand/brand__1.png" alt="">
+                            <img src="assets/img/logo/footer_brand1.webp" alt="">
                         </div>
                     </div>
                 </div>
