--- a/blog.html
+++ b/blog.html
@@ -811,25 +811,16 @@
 
                     <div class="brand__inner brand__inner--2">
                         <div class="brand__single">
-                            <img src="assets/img/brand/brand__1.png" alt="">
+                            <img src="assets/img/logo/footer_brand_crunch_base.webp" alt="">
                         </div>
                         <div class="brand__single">
-                            <img src="assets/img/brand/brand__2.png" alt="">
+                            <img src="assets/img/logo/footer_brand_trust.webp" alt="">
                         </div>
                         <div class="brand__single">
-                            <img src="assets/img/brand/brand__1.png" alt="">
+                            <img src="assets/img/logo/footer_brand_design_crunch.webp" alt="">
                         </div>
                         <div class="brand__single">
-                            <img src="assets/img/brand/brand__2.png" alt="">
-                        </div>
-                        <div class="brand__single">
-                            <img src="assets/img/brand/brand__1.png" alt="">
-                        </div>
-                        <div class="brand__single">
-                            <img src="assets/img/brand/brand__2.png" alt="">
-                        </div>
-                        <div class="brand__single">
-                            <img src="assets/img/brand/brand__1.png" alt="">
+                            <img src="assets/img/logo/footer_brand1.webp" alt="">
                         </div>
                     </div>
                 </div>
